Updates for NIST SP parsing

--- a/update_codes.yaml
+++ b/update_codes.yaml
@@ -1,7 +1,7 @@
 NBS MONO: NBS MN
 NIST MONO: NIST MN
 NIST MP: NBS MP
-NIST SP 304a-2017: NIST SP 304A-2017
+#NIST SP 304a-2017: NIST SP 304A-2017
 NIST SP 260-162 2006ed.: NIST SP 260-162e2006
 NBS CIRC 154suprev: NBS CIRC 154r1sup
 NIST SP 260-126 rev 2013: NIST SP 260-126r2013
@@ -10,6 +10,7 @@ NIST SP 800-56ar: NIST SP 800-56Ar1
 NIST.LCIRC: NIST.LC
 NBS.LCIRC: NBS.LC
 NISTIR: NIST IR
+NIST FIPS: FIPS PUB
 NIST.CSWP.01162020pt: NIST.CSWP.01162020(por)
 NBS FIPS 11-1-Sep30: NBS FIPS 11-1-Sep30/1977
 NBS CRPL c4-4: NBS CRPL 4-4
