Parse NIST SP 800-57Pt3r1 parsing and "rev" as revision

--- a/update_codes.yaml
+++ b/update_codes.yaml
@@ -8,6 +8,7 @@ NIST SP 260-126 rev 2013: NIST SP 260-126r2013
 NIST CSWP: NIST CSRC White Paper
 NIST SP 800-56ar: NIST SP 800-56Ar1
 NIST.LCIRC: NIST.LC
+NIST SP 800-57Pt3r1: NIST SP 800-57pt3r1
 NBS.LCIRC: NBS.LC
 NISTIR: NIST IR
 NIST FIPS: FIPS PUB
