Parse NIST SP identifiers with -NCNR | -PERMIS | -BFRL suffixes

--- a/update_codes.yaml
+++ b/update_codes.yaml
@@ -29,6 +29,8 @@ NBS.LC.1088sp: NBS.LC.1088.spa
 NBS.LC.145r11/1925: NBS.LC.145/Upd1-192511
 NBS.LC.118sup12/1926: NBS.LC.118sup/Upd1-192612
 NIST SP 955 Suppl.: NIST SP 955sup
+NIST SP 800-38e: NIST SP 800-38E
+NIST SP 782-1995-96: NIST SP 782-1995
 !ruby/regexp /NBS[.\s]CS[.\s]e/: NBS CS-E
 !ruby/regexp /(?<=\d)es/: (spa)
 !ruby/regexp /(?<=\d)chi/: (zho)
