Add NIST FIPS series parser

--- a/update_codes.yaml
+++ b/update_codes.yaml
@@ -12,8 +12,11 @@ NIST SP 800-57Pt3r1: NIST SP 800-57pt3r1
 NBS.LCIRC: NBS.LC
 NISTIR: NIST IR
 NIST FIPS: FIPS PUB
+NIST.FIPS: FIPS.PUB
 NIST.CSWP.01162020pt: NIST.CSWP.01162020(por)
 NBS FIPS 11-1-Sep30: NBS FIPS 11-1-Sep30/1977
+FIPS PUB 54-1-Jan15: FIPS PUB 54-1
+FIPS PUB 54-1-Jan17: FIPS PUB 54-1-Jan17/1991
 NBS CRPL c4-4: NBS CRPL 4-4
 NBS CIRC e2: NBS CIRC 2e2
 NIST AMS 300-8r1 (February 2021 update): NIST AMS 300-8r1/Upd1-201502
