Add NBS CIRC series parser

--- a/update_codes.yaml
+++ b/update_codes.yaml
@@ -4,6 +4,11 @@ NIST MP: NBS MP
 #NIST SP 304a-2017: NIST SP 304A-2017
 NIST SP 260-162 2006ed.: NIST SP 260-162e2006
 NBS CIRC 154suprev: NBS CIRC 154r1sup
+NBS CIRC supJun1925-Jun1926: NBS CIRC 24e7sup2
+NBS CIRC supJun1925-Jun1927: NBS CIRC 24e7sup3
+NBS CIRC sup: NBS CIRC 24e7sup
+NBS CIRC e2: NBS CIRC 2e2
+NBS CIRC 25sup-1924: NBS CIRC 25sup
 NIST SP 260-126 rev 2013: NIST SP 260-126r2013
 NIST CSWP: NIST CSRC White Paper
 NIST SP 800-56ar: NIST SP 800-56Ar1
@@ -18,7 +23,6 @@ NBS FIPS 11-1-Sep30: NBS FIPS 11-1-Sep30/1977
 FIPS PUB 54-1-Jan15: FIPS PUB 54-1
 FIPS PUB 54-1-Jan17: FIPS PUB 54-1-Jan17/1991
 NBS CRPL c4-4: NBS CRPL 4-4
-NBS CIRC e2: NBS CIRC 2e2
 NIST AMS 300-8r1 (February 2021 update): NIST AMS 300-8r1/Upd1-201502
 # add missing update dates
 NIST IR 8115r1-upd: NIST IR 8115r1/Upd1-202103
