--- a/update_codes.yaml
+++ b/update_codes.yaml
@@ -39,6 +39,7 @@ NIST SP 955 Suppl.: NIST SP 955sup
 NIST SP 800-38e: NIST SP 800-38E
 NIST SP 782-1995-96: NIST SP 782-1995
 NIST FIPS 54-Jan15: NIST FIPS 54
+!ruby/regexp /NBS CRPL-F-B(?=\d+)/: "NBS CRPL-F-B "
 !ruby/regexp /NBS[.\s]CS[.\s]e/: NBS CS-E
 !ruby/regexp /(?<=\d)es/: (spa)
 !ruby/regexp /(?<=\d)chi/: (zho)
