--- a/update_codes.yaml
+++ b/update_codes.yaml
@@ -10,7 +10,7 @@ NBS CIRC sup: NBS CIRC 24e7sup
 NBS CIRC e2: NBS CIRC 2e2
 NBS CIRC 25sup-1924: NBS CIRC 25sup
 NIST SP 260-126 rev 2013: NIST SP 260-126r2013
-NIST CSWP: NIST CSRC White Paper
+NIST CSWP: CSRC White Paper
 NIST SP 800-56ar: NIST SP 800-56Ar1
 NIST.LCIRC: NIST.LC
 NIST SP 800-57Pt3r1: NIST SP 800-57pt3r1
