--- a/update_codes.yaml
+++ b/update_codes.yaml
@@ -41,7 +41,7 @@ NIST SP 782-1995-96: NIST SP 782-1995
 NIST FIPS 54-Jan15: NIST FIPS 54
 NBS report ;: NBS RPT
 !ruby/regexp /NBS CRPL-F-B(?=\d+)/: "NBS CRPL-F-B "
-!ruby/regexp /NBS[.\s]CS[.\s]e/: NBS CS-E
+!ruby/regexp /NBS[.\s]CS[.\s]e/: "NBS CS-E "
 !ruby/regexp /(?<=\d)es/: (spa)
 !ruby/regexp /(?<=\d)chi/: (zho)
 !ruby/regexp /(?<=\d)viet/: (vie)
