Add NBS/NIST HB series parsers

--- a/update_codes.yaml
+++ b/update_codes.yaml
@@ -1,7 +1,6 @@
 NBS MONO: NBS MN
 NIST MONO: NIST MN
 NIST MP: NBS MP
-#NIST SP 304a-2017: NIST SP 304A-2017
 NIST SP 260-162 2006ed.: NIST SP 260-162e2006
 NBS CIRC 154suprev: NBS CIRC 154r1sup
 NBS CIRC supJun1925-Jun1926: NBS CIRC 24e7sup2
@@ -30,8 +29,9 @@ NIST SP 500-300-upd: NIST SP 500-300/Upd1-202105
 NIST TN 2150-upd: NIST TN 2150/Upd1-202102
 NIST IR 8170-upd: NIST IR 8170/Upd1-202003
 NBS.HB.105-1r1990: NIST.HB.105-1r1990
-NBS.FIPS.100-1-1991: NIST.FIPS.100-1-1991
 NBS.HB.28p11969: NBS.HB.28-1969pt1
+NIST HB 105-1-1990: NIST HB 105-1r1990
+NBS.FIPS.100-1-1991: NIST.FIPS.100-1-1991
 NBS.LC.1088sp: NBS.LC.1088.spa
 NBS.LC.145r11/1925: NBS.LC.145/Upd1-192511
 NBS.LC.118sup12/1926: NBS.LC.118sup/Upd1-192612
