Add NIST IR series parser

--- a/update_codes.yaml
+++ b/update_codes.yaml
@@ -22,11 +22,11 @@ FIPS PUB 54-1-Jan15: FIPS PUB 54-1
 FIPS PUB 54-1-Jan17: FIPS PUB 54-1-Jan17/1991
 NBS CRPL c4-4: NBS CRPL 4-4
 NIST AMS 300-8r1 (February 2021 update): NIST AMS 300-8r1/Upd1-201502
-# add missing update dates
 NIST IR 8115r1-upd: NIST IR 8115r1/Upd1-202103
 NIST SP 500-300-upd: NIST SP 500-300/Upd1-202105
 NIST TN 2150-upd: NIST TN 2150/Upd1-202102
 NIST IR 8170-upd: NIST IR 8170/Upd1-202003
+NBS IR 73-197r: NBS IR 73-197r1
 NBS.HB.105-1r1990: NIST.HB.105-1r1990
 NBS.HB.28p11969: NBS.HB.28-1969pt1
 NIST HB 105-1-1990: NIST HB 105-1r1990
